2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>
	* mn10300.h (E_MN10300_MACH_AM33_2): Renamed from
	E_MN10300_MACH_AM332.
	2000-03-31  Alexandre Oliva  <aoliva@cygnus.com>
	* mn10300.h (E_MN10300_MACH_AM332): Defined.

2003-07-01  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* s390.h (elf_s390_reloc_type): Add long displacement relocations
	R_390_20, R_390_GOT20, R_390_GOTPLT20 and R_390_TLS_GOTIE20.

2003-06-29  Andreas Jaeger  <aj@suse.de>

	* mmix.h: Convert to ISO C90 prototypes.
	* mips.h: Likewise.

	* reloc-macros.h (START_RELOC_NUMBERS): Convert to ISO C90
	prototype.
	(RELOC_NUMBER): Remove !__STDC__ code.

2003-06-13  Robert Millan <zeratul2@wanadoo.es>

	* common.h (GNU_ABI_TAG_NETBSD): New tag.
	(GNU_ABI_TAG_FREEBSD): New tag.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* h8.h (E_H8_MACH_H8300SXN): New flag.

2003-06-03  Nick Clifton  <nickc@redhat.com>

	* v850.h (R_V850_32): Rename to R_V850_ABS32.
        Add R_V850_REL32.

2003-05-15  Roland McGrath  <roland@redhat.com>

	* common.h (NT_AUXV, AT_*): New macros.
	* external.h (Elf32_External_Auxv, Elf64_External_Auxv): New types.
	* internal.h (Elf_Internal_Auxv): New type.

2003-05-14  Michael Snyder  <msnyder@redhat.com>
	From  Bernd Schmidt  <bernds@redhat.com>
	* h8.h (E_H8_MACH_H8300SX): New.

2003-04-24 Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* elf/h8.h (E_H8_MACH_H8300HN, E_H8_MACH_H8300SN): New

2003-04-23  J"orn Rennecke <joern.rennecke@superh.com>

	* common.h (EM_SH): Amend comment to refer to SuperH.

2003-04-22  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* common.h: Replace references to Mitsubishi M32R with
	references to Renesas M32R.

2003-04-15  Rohit Kumar Srivastava <rohits@kpitcummins.com>

	* common.h: Replace occurrances of 'Hitachi' with 'Renesas'.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

        * elf/common.h (EM_XTENSA_OLD): Define.
        * elf/xtensa.h: New file.
