@@ -1,5 +1,5 @@
 /* MN10300 ELF support for BFD.
-   Copyright 1998, 1999, 2000 Free Software Foundation, Inc.
+   Copyright 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
 
 This file is part of BFD, the Binary File Descriptor library.
 
@@ -36,6 +36,20 @@ START_RELOC_NUMBERS (elf_mn10300_reloc_type)
   RELOC_NUMBER (R_MN10300_GNU_VTINHERIT, 7)
   RELOC_NUMBER (R_MN10300_GNU_VTENTRY, 8)
   RELOC_NUMBER (R_MN10300_24, 9)
+  RELOC_NUMBER (R_MN10300_GOTPC32, 10)
+  RELOC_NUMBER (R_MN10300_GOTPC16, 11)
+  RELOC_NUMBER (R_MN10300_GOTOFF32, 12)
+  RELOC_NUMBER (R_MN10300_GOTOFF24, 13)
+  RELOC_NUMBER (R_MN10300_GOTOFF16, 14)
+  RELOC_NUMBER (R_MN10300_PLT32, 15)
+  RELOC_NUMBER (R_MN10300_PLT16, 16)
+  RELOC_NUMBER (R_MN10300_GOT32, 17)
+  RELOC_NUMBER (R_MN10300_GOT24, 18)
+  RELOC_NUMBER (R_MN10300_GOT16, 19)
+  RELOC_NUMBER (R_MN10300_COPY, 20)
+  RELOC_NUMBER (R_MN10300_GLOB_DAT, 21)
+  RELOC_NUMBER (R_MN10300_JMP_SLOT, 22)
+  RELOC_NUMBER (R_MN10300_RELATIVE, 23)
 END_RELOC_NUMBERS (R_MN10300_MAX)
 
 /* Machine variant if we know it.  This field was invented at Cygnus,
